Front end back end connection

--- a/pro/my/commend2.html
+++ b/pro/my/commend2.html
@@ -354,7 +354,7 @@
 <script src="../js/main.js"></script>
 <!-- tawk chat JS
     ============================================ -->
-<script src="../js/tawk-chat.js"></script>
+<!--<script src="../js/tawk-chat.js"></script>-->
 <script>
     var houses=[];
     $(document).ready(function() {
