--- a/pro/my/home_seller.html
+++ b/pro/my/home_seller.html
@@ -363,7 +363,7 @@
     <script src="../js/main.js"></script>
 	<!-- tawk chat JS
 		============================================ -->
-    <script src="../js/tawk-chat.js"></script>
+<!--    <script src="../js/tawk-chat.js"></script>-->
 </body>
 
 </html>
