--- a/pro/my/login-register.html
+++ b/pro/my/login-register.html
@@ -9,10 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- favicon
 		============================================ -->
-<!--    <link rel="shortcut icon" type="image/x-icon" href="../img/favicon.ico">-->
+    <!--    <link rel="shortcut icon" type="image/x-icon" href="../img/favicon.ico">-->
     <!-- Google Fonts
 		============================================ -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700,900" rel="stylesheet">
     <!-- Bootstrap CSS
 		============================================ -->
     <link rel="stylesheet" href="../css/bootstrap.min.css">
@@ -26,7 +25,7 @@
     <link rel="stylesheet" href="../css/owl.transitions.css">
     <!-- animate CSS
 		============================================ -->
-     <link rel="stylesheet" href="../css/animate.css">
+    <link rel="stylesheet" href="../css/animate.css">
     <!-- normalize CSS
 		============================================ -->
     <link rel="stylesheet" href="../css/normalize.css">
@@ -44,7 +43,7 @@
     <link rel="stylesheet" href="../css/main.css">
     <!-- style CSS
 		============================================ -->
-    <link rel="stylesheet" href="ht/style.css">
+    <link rel="stylesheet" href="../my/ht/style.css">
     <!-- responsive CSS
 		============================================ -->
     <link rel="stylesheet" href="../css/responsive.css">
@@ -59,112 +58,163 @@
 
 
 <body>
-    <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-    <!-- Login Register area Start-->
-    <div class="login-content">
-        <!-- Login -->
-        <div class="nk-block toggled" id="l-login">
-            <div class="nk-form">
-                <div class="input-group">
-                    <span class="input-group-addon nk-ic-st-pro"><i class="notika-icon notika-support"></i></span>
-                    <div class="nk-int-st">
-                        <input type="text" class="form-control" id="login_user" placeholder="Username">
-                    </div>
+<!--[if lt IE 8]>
+<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+<![endif]-->
+<!-- Login Register area Start-->
+<div class="login-content">
+    <!-- Login -->
+    <div class="nk-block toggled" id="l-login">
+        <div class="nk-form">
+            <div class="input-group">
+                <span class="input-group-addon nk-ic-st-pro"><i class="notika-icon notika-support"></i></span>
+                <div class="nk-int-st">
+                    <input type="text" class="form-control" id="login_user" placeholder="Username">
                 </div>
-                <div class="input-group mg-t-15">
-                    <span class="input-group-addon nk-ic-st-pro"><i class="notika-icon notika-edit"></i></span>
-                    <div class="nk-int-st">
-                        <input type="password" class="form-control" id="login_pas" placeholder="Password">
-                    </div>
+            </div>
+            <div class="input-group mg-t-15">
+                <span class="input-group-addon nk-ic-st-pro"><i class="notika-icon notika-edit"></i></span>
+                <div class="nk-int-st">
+                    <input type="password" class="form-control" id="login_pas" placeholder="Password">
                 </div>
-<!--                <div class="fm-checkbox">-->
-
-<!--                    <label><input name="char" type="radio" id="seller-checks"> <i></i> Signed in as seller</label>-->
-<!--                    <label><input name="char" type="radio" id="buyer-checks"> <i></i> Signed in as buyer</label>-->
-<!--                </div>-->
-
-                <a href="javascript:void(0);"  data-ma-block="#l-register" class="btn btn-login btn-success btn-float" onclick="login()"><i class="notika-icon notika-right-arrow right-arrow-ant"></i></a>
             </div>
-
-            <div class="nk-navigation nk-lg-ic">
-                <a href="#" data-ma-action="nk-login-switch" data-ma-block="#l-register"><i class="notika-icon notika-plus-symbol"></i> <span>Register</span></a>
-                <a href="#" data-ma-action="nk-login-switch" data-ma-block="#l-forget-password"><i>?</i> <span>Forgot Password</span></a>
-            </div>
+            <a href="javascript:void(0);"  data-ma-block="#l-register" class="btn btn-login btn-success btn-float" onclick="login()"><i class="notika-icon notika-right-arrow right-arrow-ant"></i></a>
         </div>
 
-        <!-- Register -->
-        <div class="nk-block" id="l-register">
-            <div class="nk-form">
-                <div class="input-group">
-                    <span class="input-group-addon nk-ic-st-pro"><i class="notika-icon notika-support"></i></span>
-                    <div class="nk-int-st">
-                        <input type="text" class="form-control" id="regist_user" placeholder="Username">
-                    </div>
-                </div>
-
-                <div class="input-group mg-t-15">
-                    <span class="input-group-addon nk-ic-st-pro"><i class="notika-icon notika-mail"></i></span>
-                    <div class="nk-int-st">
-                        <input type="text"  class="form-control" id="regist_email" placeholder="Email Address" >
-                    </div>
-                </div>
-
-                <div class="input-group mg-t-15">
-                    <span class="input-group-addon nk-ic-st-pro"><i class="notika-icon notika-edit"></i></span>
-                    <div class="nk-int-st">
-                        <input type="password" class="form-control"  id="regist_pas" placeholder="Password">
-                    </div>
-                </div>
-
-                <div class="input-group mg-t-15">
-                    <span class="input-group-addon nk-ic-st-pro"><i class="notika-icon notika-edit"></i></span>
-                    <div class="nk-int-st">
-                        <input type="text" class="form-control" id="regist_info"  placeholder="Phone">
-                    </div>
-                </div>
-                <a href="javascript:void(0);" class="btn btn-login btn-success btn-float" onclick="register()"><i class="notika-icon notika-right-arrow"></i></a>
-            </div>
-
-            <div class="nk-navigation rg-ic-stl">
-                <a href="" data-ma-action="nk-login-switch" data-ma-block="#l-login" class="regist" ><i class="notika-icon notika-right-arrow"></i> <span>Sign in</span></a>
-                <a href="" data-ma-action="nk-login-switch" data-ma-block="#l-forget-password"><i>?</i> <span>Forgot Password</span></a>
-            </div>
-
-        </div>
-
-        <!-- Forgot Password -->
-        <div class="nk-block" id="l-forget-password">
-            <div class="nk-form">
-                <p class="text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu risus. Curabitur commodo lorem fringilla enim feugiat commodo sed ac lacus.</p>
-
-                <div class="input-group">
-                    <span class="input-group-addon nk-ic-st-pro"><i class="notika-icon notika-mail"></i></span>
-                    <div class="nk-int-st">
-                        <input type="text" class="form-control" placeholder="Email Address">
-                    </div>
-                </div>
-
-                <a href="#l-login" data-ma-action="nk-login-switch" data-ma-block="#l-login" class="btn btn-login btn-success btn-float"><i class="notika-icon notika-right-arrow"></i></a>
-            </div>
-
-            <div class="nk-navigation nk-lg-ic rg-ic-stl">
-                <a href="" data-ma-action="nk-login-switch" data-ma-block="#l-login"><i class="notika-icon notika-right-arrow"></i> <span>Sign in</span></a>
-                <a href="" data-ma-action="nk-login-switch" data-ma-block="#l-register"><i class="notika-icon notika-plus-symbol"></i> <span>Register</span></a>
-            </div>
+        <div class="nk-navigation nk-lg-ic">
+            <a href="#" data-ma-action="nk-login-switch" data-ma-block="#l-register"><i class="notika-icon notika-plus-symbol"></i> <span>Register</span></a>
+            <a href="#" data-ma-action="nk-login-switch" data-ma-block="#l-forget-password"><i>?</i> <span>Forgot Password</span></a>
         </div>
     </div>
-    <!-- Login Register area End-->
-    <!-- jquery
-		============================================ -->
-    <!-- bootstrap JS
-		============================================ -->
-    <script src="../js/bootstrap.min.js"></script>
 
-    <!-- main JS
-		============================================ -->
-    <script src="../js/main.js"></script>
+    <!-- Register -->
+    <div class="nk-block" id="l-register">
+        <div class="nk-form">
+            <div class="input-group">
+                <span class="input-group-addon nk-ic-st-pro"><i class="notika-icon notika-support"></i></span>
+                <div class="nk-int-st">
+                    <input type="text" class="form-control" id="regist_user" placeholder="Username">
+                </div>
+            </div>
+
+            <div class="input-group mg-t-15">
+                <span class="input-group-addon nk-ic-st-pro"><i class="notika-icon notika-mail"></i></span>
+                <div class="nk-int-st">
+                    <input type="text"  class="form-control" id="regist_email" placeholder="Email Address" >
+                </div>
+            </div>
+
+            <div class="input-group mg-t-15">
+                <span class="input-group-addon nk-ic-st-pro"><i class="notika-icon notika-edit"></i></span>
+                <div class="nk-int-st">
+                    <input type="password" class="form-control"  id="regist_pas" placeholder="Password">
+                </div>
+            </div>
+
+            <div class="input-group mg-t-15">
+                <span class="input-group-addon nk-ic-st-pro"><i class="notika-icon notika-edit"></i></span>
+                <div class="nk-int-st">
+                    <input type="text" class="form-control" id="regist_info"  placeholder="Phone">
+                </div>
+            </div>
+            <a href="javascript:void(0);" class="btn btn-login btn-success btn-float" onclick="register()"><i class="notika-icon notika-right-arrow"></i></a>
+        </div>
+
+        <div class="nk-navigation rg-ic-stl">
+            <a href="" data-ma-action="nk-login-switch" data-ma-block="#l-login" class="regist" ><i class="notika-icon notika-right-arrow"></i> <span>Sign in</span></a>
+            <a href="" data-ma-action="nk-login-switch" data-ma-block="#l-forget-password"><i>?</i> <span>Forgot Password</span></a>
+        </div>
+
+    </div>
+
+    <!-- Forgot Password -->
+    <div class="nk-block" id="l-forget-password">
+        <div class="nk-form">
+            <p class="text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu risus. Curabitur commodo lorem fringilla enim feugiat commodo sed ac lacus.</p>
+
+            <div class="input-group">
+                <span class="input-group-addon nk-ic-st-pro"><i class="notika-icon notika-mail"></i></span>
+                <div class="nk-int-st">
+                    <input type="text" class="form-control" placeholder="Email Address">
+                </div>
+            </div>
+
+            <a href="#l-login" data-ma-action="nk-login-switch" data-ma-block="#l-login" class="btn btn-login btn-success btn-float"><i class="notika-icon notika-right-arrow"></i></a>
+        </div>
+
+        <div class="nk-navigation nk-lg-ic rg-ic-stl">
+            <a href="" data-ma-action="nk-login-switch" data-ma-block="#l-login"><i class="notika-icon notika-right-arrow"></i> <span>Sign in</span></a>
+            <a href="" data-ma-action="nk-login-switch" data-ma-block="#l-register"><i class="notika-icon notika-plus-symbol"></i> <span>Register</span></a>
+        </div>
+    </div>
+</div>
+<!-- Login Register area End-->
+<!-- jquery
+    ============================================ -->
+<script src="../js/vendor/jquery-1.12.4.min.js"></script>
+<!-- bootstrap JS
+    ============================================ -->
+<script src="../js/bootstrap.min.js"></script>
+<!-- wow JS
+    ============================================ -->
+<script src="../js/wow.min.js"></script>
+<!-- price-slider JS
+    ============================================ -->
+<script src="../js/jquery-price-slider.js"></script>
+<!-- owl.carousel JS
+    ============================================ -->
+<script src="../js/owl.carousel.min.js"></script>
+<!-- scrollUp JS
+    ============================================ -->
+<script src="../js/jquery.scrollUp.min.js"></script>
+<!-- meanmenu JS
+    ============================================ -->
+<script src="../js/meanmenu/jquery.meanmenu.js"></script>
+<!-- counterup JS
+    ============================================ -->
+<script src="../js/counterup/jquery.counterup.min.js"></script>
+<script src="../js/counterup/waypoints.min.js"></script>
+<script src="../js/counterup/counterup-active.js"></script>
+<!-- mCustomScrollbar JS
+    ============================================ -->
+<script src="../js/scrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
+<!-- sparkline JS
+    ============================================ -->
+<script src="../js/sparkline/jquery.sparkline.min.js"></script>
+<script src="../js/sparkline/sparkline-active.js"></script>
+<!-- flot JS
+    ============================================ -->
+<script src="../js/flot/jquery.flot.js"></script>
+<script src="../js/flot/jquery.flot.resize.js"></script>
+<script src="../js/flot/flot-active.js"></script>
+<!-- knob JS
+    ============================================ -->
+<script src="../js/knob/jquery.knob.js"></script>
+<script src="../js/knob/jquery.appear.js"></script>
+<script src="../js/knob/knob-active.js"></script>
+<!--  Chat JS
+    ============================================ -->
+<script src="../js/chat/jquery.chat.js"></script>
+<!--  wave JS
+    ============================================ -->
+<script src="../js/wave/waves.min.js"></script>
+<script src="../js/wave/wave-active.js"></script>
+<!-- icheck JS
+    ============================================ -->
+<script src="../js/icheck/icheck.min.js"></script>
+<script src="../js/icheck/icheck-active.js"></script>
+<!--  todo JS
+    ============================================ -->
+<script src="../js/todo/jquery.todo.js"></script>
+<!-- Login JS
+    ============================================ -->
+<script src="../js/login/login-action.js"></script>
+<!-- plugins JS
+    ============================================ -->
+<script src="../js/plugins.js"></script>
+<!-- main JS
+    ============================================ -->
+<script src="../js/main.js"></script>
 
 </body>
 <script>
@@ -198,40 +248,41 @@
         else{
             $.ajax({
 
-            type: "POST",
+                type: "POST",
 
-            url: "http://175.24.51.64:8081/users/register",
+                url: "http://175.24.51.64:8081/users/register",
 
-            data: "name=" + username + "&phoneNumber=" + phone + "&email=" + email + "&password=" + password + "&status=1&deleteFlag=1",
+                data: "name=" + username + "&phoneNumber=" + phone + "&email=" + email + "&password=" + password + "&status=2&deleteFlag=1",
 
-            success: function(msg){
+                success: function(msg){
 
-                var data = JSON.parse(msg);
-                if(data['msg']==='failed'){
-                    Toast.fire({
-                        icon: 'error',
-                        title: 'Regist in unsuccessfully'
-                    })
+                    var data = JSON.parse(msg);
+                    if(data['msg']==='failed'){
+                        Toast.fire({
+                            icon: 'error',
+                            title: 'Regist in unsuccessfully'
+                        })
+                    }
+                    else{
+                        Toast.fire({
+                            icon: 'success',
+                            title: 'Regist in unsuccessfully'
+                        })
+
+                    }
+
+                },
+                error: function (msg) {
+                    console.log("Data not Saved: " + msg);
                 }
-                else{
-                    Toast.fire({
-                        icon: 'success',
-                        title: 'Regist in unsuccessfully'
-                    })
-                }
 
-            },
-            error: function (msg) {
-                console.log("Data not Saved: " + msg);
-            }
-
-        });}
+            });
+        }
     }
 
     function login() {
         var login_username = document.getElementById("login_user").value;
         var login_password = document.getElementById("login_pas").value;
-        console.log("login_username"+login_username);
         $.ajax({
 
             type: "POST",
@@ -241,21 +292,41 @@
             data: "name=" + login_username +"&password=" + login_password,
 
             success: function(msg){
-                var data = JSON.parse(msg);
-                if(data['msg']==='failed'){
+                // console.log("typeo"+typeof msg);
+                // var data = JSON.parse(msg);
+                // // if(DataType)
+                // if(data['code']===400){
+                //     Toast.fire({
+                //         icon: 'error',
+                //         title: 'Sign in unsuccessfully'
+                //     })
+                // }
+                // else if(){
+                //     Toast.fire({
+                //         icon: 'success',
+                //         title: 'Sign in successfully'
+                //     });
+                //     var url = "commend.html?u="+login_username;
+                //     // console.log(data['userId']);
+                //     setTimeout(function(){window.location.href=url;},1000);
+                // }
+                if(typeof msg=="object"){
                     Toast.fire({
-                        icon: 'error',
-                        title: 'Sign in unsuccessfully'
-                    })
+                                icon: 'success',
+                                title: 'Sign in successfully'
+                            });
+                            var url = "commend.html?u="+msg["userId"];
+                            console.log(msg['userId']);
+
+                            window.sessionStorage.setItem("userid",msg['userId']);
+                            window.sessionStorage.setItem("token",msg['token']);
+                            setTimeout(function(){window.location.href=url;},1000);
                 }
                 else{
-
-
-                    Toast.fire({
-                        icon: 'success',
-                        title: 'Sign in successfully'
-                    });
-                    setTimeout(function(){window.location.href="commend.html";},1000);
+                        Toast.fire({
+                            icon: 'error',
+                            title: 'Sign in unsuccessfully'
+                        })
                 }
 
             },
