--- a/pro/my/chat.html
+++ b/pro/my/chat.html
@@ -187,22 +187,21 @@
     </div>
 </div>
 <!-- End Header Top Area -->
+<!-- Main Menu area start-->
 <div class="main-menu-area mg-tb-40">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <ul class="nav nav-tabs notika-menu-wrap menu-it-icon-pro">
-                    <li ><a href="commend.html"><i class="notika-icon notika-house"></i> Home</a>
+                    <li class="active"><a data-toggle="tab" href="#Home"><i class="notika-icon notika-house"></i> Home</a>
                     </li>
                     <li><a data-toggle="tab" href="#Houses"><i class="notika-icon notika-edit"></i> My Houses</a>
                     </li>
-                    <li ><a  href="filtertable.html"><i class="notika-icon notika-windows"></i> Filter lookup</a>
+                    <li><a  href="filtertable.html"><i class="notika-icon notika-windows"></i> Filter lookup</a>
                     </li>
                     <li><a href="upload_house.html"><i class="notika-icon notika-form"></i> Selling houses</a>
                     </li>
-                    <li><a  onclick="t()" data-toggle="tab" href="#Appviews"><i class="notika-icon notika-app"></i>Settings</a>
-                    </li>
-                    <li CLASS="active"><a onclick="f()"><i class="notika-icon notika-support"></i>Chatbox</a>
+                    <li><a href="chat.html"><i class="notika-icon notika-support"></i>Chatbox</a>
                     </li>
                 </ul>
                 <div class="tab-content custom-menu-content">
@@ -211,48 +210,9 @@
                     </div>
                     <div id="Houses" class="tab-pane notika-tab-menu-bg animated flipInX">
                         <ul class="notika-main-menu-dropdown">
-                            <li><a href="data.html">Starred</a>
+                            <li><a href="Starred.html">Starred</a>
                             </li>
-                            <li><a href="data-map.html">Bought</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div id="Charts" class="tab-pane notika-tab-menu-bg animated flipInX">
-                        <ul class="notika-main-menu-dropdown">
-                            <li><a href="flot-charts.html">Flot Charts</a>
-                            </li>
-                            <li><a href="bar-charts.html">Bar Charts</a>
-                            </li>
-                            <li><a href="line-charts.html">Line Charts</a>
-                            </li>
-                            <li><a href="area-charts.html">Area Charts</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div id="Tables" class="tab-pane notika-tab-menu-bg animated flipInX">
-                        <ul class="notika-main-menu-dropdown">
-                            <li><a href="normal-table.html">Normal Table</a>
-                            </li>
-                            <li><a href="data-table.html">Data Table</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div id="Forms" class="tab-pane notika-tab-menu-bg animated flipInX">
-                        <ul class="notika-main-menu-dropdown">
-                            <li><a href="form-elements.html">Form Elements</a>
-                            </li>
-                            <li><a href="form-components.html">Form Components</a>
-                            </li>
-                            <li><a href="form-examples.html">Form Examples</a>
-                            </li>
-                        </ul>
-                    </div>
-
-                    <div id="Page" class="tab-pane notika-tab-menu-bg animated flipInX">
-                        <ul class="notika-main-menu-dropdown">
-                            <li><a href="contact.html">Contact</a>
-                            </li>
-                            <li><a href="ht/404.html">404 Page</a>
+                            <li><a href="Sold.html">On Sale</a>
                             </li>
                         </ul>
                     </div>
