--- a/pro/my/commend.html
+++ b/pro/my/commend.html
@@ -55,6 +55,8 @@
     <script src="../js/vendor/modernizr-2.8.3.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 
+    <script src="../js/myjs/global.js"></script>
+
 </head>
 
 <body>
@@ -74,11 +76,11 @@
                 <div class="header-top-menu">
                     <ul class="nav navbar-nav notika-top-nav">
                         <li class="nav-item dropdown">
-                            <a href="#" data-toggle="dropdown" role="button" aria-expanded="false" class="nav-link dropdown-toggle"><span><i class="notika-icon notika-search"></i></span></a>
+                            <a  data-toggle="dropdown" role="button" aria-expanded="false" class="nav-link dropdown-toggle"><span><i class="notika-icon notika-search"></i></span></a>
                             <div role="menu" class="dropdown-menu search-dd animated flipInX">
-                                <div class="search-input">
-                                    <i class="notika-icon notika-left-arrow"></i>
-                                    <input type="text" />
+                                <div class="search-input" >
+                                        <i onclick="searchbox()" class="notika-icon notika-left-arrow" ></i>
+                                    <input type="text" id="searchbox"/>
                                 </div>
                             </div>
                         </li>
@@ -129,15 +131,13 @@
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <ul class="nav nav-tabs notika-menu-wrap menu-it-icon-pro">
-                    <li class="active"><a data-toggle="tab" href="#Home"><i class="notika-icon notika-house"></i> Home</a>
+                    <li ><a href="commend.html"><i class="notika-icon notika-house"></i> Home</a>
                     </li>
                     <li><a data-toggle="tab" href="#Houses"><i class="notika-icon notika-edit"></i> My Houses</a>
                     </li>
                     <li><a  href="filtertable.html"><i class="notika-icon notika-windows"></i> Filter lookup</a>
                     </li>
                     <li><a href="upload_house.html"><i class="notika-icon notika-form"></i> Selling houses</a>
-                    </li>
-                    <li><a  onclick="t()" data-toggle="tab" href="#Appviews"><i class="notika-icon notika-app"></i>Settings</a>
                     </li>
                     <li><a href="chat.html"><i class="notika-icon notika-support"></i>Chatbox</a>
                     </li>
@@ -150,48 +150,7 @@
                         <ul class="notika-main-menu-dropdown">
                             <li><a href="Starred.html">Starred</a>
                             </li>
-                            <li><a href="data-map.html">Bought</a>
-                            </li>
-                            <li><a href="data-map.html">On Sale</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div id="Charts" class="tab-pane notika-tab-menu-bg animated flipInX">
-                        <ul class="notika-main-menu-dropdown">
-                            <li><a href="flot-charts.html">Flot Charts</a>
-                            </li>
-                            <li><a href="bar-charts.html">Bar Charts</a>
-                            </li>
-                            <li><a href="line-charts.html">Line Charts</a>
-                            </li>
-                            <li><a href="area-charts.html">Area Charts</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div id="Tables" class="tab-pane notika-tab-menu-bg animated flipInX">
-                        <ul class="notika-main-menu-dropdown">
-                            <li><a href="normal-table.html">Normal Table</a>
-                            </li>
-                            <li><a href="data-table.html">Data Table</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div id="Forms" class="tab-pane notika-tab-menu-bg animated flipInX">
-                        <ul class="notika-main-menu-dropdown">
-                            <li><a href="form-elements.html">Form Elements</a>
-                            </li>
-                            <li><a href="form-components.html">Form Components</a>
-                            </li>
-                            <li><a href="form-examples.html">Form Examples</a>
-                            </li>
-                        </ul>
-                    </div>
-
-                    <div id="Page" class="tab-pane notika-tab-menu-bg animated flipInX">
-                        <ul class="notika-main-menu-dropdown">
-                            <li><a href="contact.html">Contact</a>
-                            </li>
-                            <li><a href="ht/404.html">404 Page</a>
+                            <li><a href="Sold.html">On Sale</a>
                             </li>
                         </ul>
                     </div>
@@ -408,6 +367,7 @@
 <script src="../js/myjs/jquery.mask.js"></script>
 <script>
     var houses=[];
+
     function addh() {
         var loveStr = "";
         for (let i = 0; i < houses.length; i++) {
@@ -415,7 +375,7 @@
                 '<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">'+
                     '<div class="blog-inner-list notika-shadow mg-t-30 tb-res-ds-n dk-res-ds">'+
                         '<div class="blog-img">'+
-                            '<img src="../images/wimages/work-1.jpg"  />'+
+                            '<img src="../images/wimages/work-'+houses[i]['img']+'.jpg"  height="204px" width="310px"/>'+
                         '</div>'+
                        ' <div class="blog-ctn">'+
                             '<div class="blog-hd-sw">'+
@@ -460,6 +420,7 @@
                         single["launchTime"]=data['data'][i]["launchTime"];
                         single["district"]=data['data'][i]["district"];
                         // single["address"]=data['data'][i]["address"];
+                        single["img"]=data['data'][i]["id"]%9;
                         houses[i]=single;
                     }
                     console.log("wwwwwwwwwwww"+houses);
