--- a/pro/my/commend2.html
+++ b/pro/my/commend2.html
@@ -108,15 +108,13 @@
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <ul class="nav nav-tabs notika-menu-wrap menu-it-icon-pro">
-                    <li ><a ><i class="notika-icon notika-house"></i> Home</a>
+                    <li ><a href="commend.html"><i class="notika-icon notika-house"></i> Home</a>
                     </li>
                     <li><a data-toggle="tab" href="#Houses"><i class="notika-icon notika-edit"></i> My Houses</a>
                     </li>
                     <li><a  href="filtertable.html"><i class="notika-icon notika-windows"></i> Filter lookup</a>
                     </li>
                     <li><a href="upload_house.html"><i class="notika-icon notika-form"></i> Selling houses</a>
-                    </li>
-                    <li><a  onclick="unenoughpoints()" data-toggle="tab" href="#Appviews"><i class="notika-icon notika-app"></i>Settings</a>
                     </li>
                     <li><a href="chat.html"><i class="notika-icon notika-support"></i>Chatbox</a>
                     </li>
@@ -127,81 +125,9 @@
                     </div>
                     <div id="Houses" class="tab-pane notika-tab-menu-bg animated flipInX">
                         <ul class="notika-main-menu-dropdown">
-                            <li><a href="data.html">Stared</a>
+                            <li><a href="Starred.html">Starred</a>
                             </li>
-                            <li><a href="google-map.html">Sold</a>
-                            </li>
-                            <li><a href="data-map.html">Buying</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div id="Charts" class="tab-pane notika-tab-menu-bg animated flipInX">
-                        <ul class="notika-main-menu-dropdown">
-                            <li><a href="flot-charts.html">Flot Charts</a>
-                            </li>
-                            <li><a href="bar-charts.html">Bar Charts</a>
-                            </li>
-                            <li><a href="line-charts.html">Line Charts</a>
-                            </li>
-                            <li><a href="area-charts.html">Area Charts</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div id="Tables" class="tab-pane notika-tab-menu-bg animated flipInX">
-                        <ul class="notika-main-menu-dropdown">
-                            <li><a href="normal-table.html">Normal Table</a>
-                            </li>
-                            <li><a href="data-table.html">Data Table</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div id="Forms" class="tab-pane notika-tab-menu-bg animated flipInX">
-                        <ul class="notika-main-menu-dropdown">
-                            <li><a href="form-elements.html">Form Elements</a>
-                            </li>
-                            <li><a href="form-components.html">Form Components</a>
-                            </li>
-                            <li><a href="form-examples.html">Form Examples</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div id="Appviews" class="tab-pane notika-tab-menu-bg animated flipInX">
-                        <ul class="notika-main-menu-dropdown">
-                            <li><a href="notification.html">Notifications</a>
-                            </li>
-                            <li><a href="alert.html">Alerts</a>
-                            </li>
-                            <li><a href="modals.html">Modals</a>
-                            </li>
-                            <li><a href="buttons.html">Buttons</a>
-                            </li>
-                            <li><a href="tabs.html">Tabs</a>
-                            </li>
-                            <li><a href="accordion.html">Accordion</a>
-                            </li>
-                            <li><a href="dialog.html">Dialogs</a>
-                            </li>
-                            <li><a href="popovers.html">Popovers</a>
-                            </li>
-                            <li><a href="tooltips.html">Tooltips</a>
-                            </li>
-                            <li><a href="dropdown.html">Dropdowns</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div id="Page" class="tab-pane notika-tab-menu-bg animated flipInX">
-                        <ul class="notika-main-menu-dropdown">
-                            <li><a href="contact.html">Contact</a>
-                            </li>
-                            <li><a href="invoice.html">Invoice</a>
-                            </li>
-                            <li><a href="typography.html">Typography</a>
-                            </li>
-                            <li><a href="color.html">Color</a>
-                            </li>
-                            <li><a href="login-register.html">Login Register</a>
-                            </li>
-                            <li><a href="ht/404.html">404 Page</a>
+                            <li><a href="Sold.html">On Sale</a>
                             </li>
                         </ul>
                     </div>
@@ -352,16 +278,24 @@
 <!-- main JS
     ============================================ -->
 <script src="../js/main.js"></script>
+<script src="../js/myjs/global.js"></script>
 <!-- tawk chat JS
     ============================================ -->
 <!--<script src="../js/tawk-chat.js"></script>-->
 <script>
+    var query= getParams("q");
     var houses=[];
     $(document).ready(function() {
+        getqueryhouses();
+    });
+</script>
+<script>
+    function getqueryhouses() {
 
         $.ajax({
-            type: "get",
-            url: "http://175.24.51.64:8081/houses/selectAll",
+            type: "Post",
+            url: "http://175.24.51.64:8081/houses/search",
+            data: "queryStr="+query,
             // dataType: "json",
             success: function (msg) {
                 var data = JSON.parse(msg);
@@ -369,28 +303,31 @@
                     console.log("qqqqqqqqqq"+data['data'])
                 }
                 else{
-                    console.log("data['data'].length"+data['data'].length);
-                    for(var i=0;i<data['data'].length;i++){
+                    let len=5;
+                    if(data['data'].length<5){
+                        len=data['data'].length;
+                    }
+                    console.log("data['data'].length"+data['data']);
+                    for(var i=0;i<len;i++){
                         var single={};
                         single["id"]=data['data'][i]["id"];
                         single["price"]=data['data'][i]["price"];
                         single["size"]=data['data'][i]["size"];
                         single["address"]=data['data'][i]["address"];
+                        single["launchTime"]=data['data'][i]["launchTime"];
+                        single["district"]=data['data'][i]["district"];
                         houses[i]=single;
                     }
                     console.log("wwwwwwwwwwww"+houses);
-                    console.log("wwwwwwwwwwww"+data['data'][0]["launchDate"]);
+                    console.log("wwwwwwwwwwww"+data['data'][0]);
                     add();
-
                 }
             },
             error: function (msg) {
                 console.log("Data not Saved: " + msg);
             }
         });
-    });
-</script>
-<script>
+    }
 function add() {
     var loveStr = "";
     for (let i = 0; i < houses.length; i++) {
@@ -409,7 +346,7 @@ function add() {
             '     <ul class="property_list">' +
             '         <li><span class="flaticon-bed"></span>3</li>/n' +
             '         <li><span class="flaticon-bathtub"></span>2</li>' +
-            '         <li><span class="flaticon-floor-plan"></span>1,878 sqft</li>' +
+            '         <li><span class="flaticon-floor-plan"></span>'+houses[i]["size"]+'square meter'+'</li>' +
             '     </ul>' +
             '     <h3><a href="#">The Blue Sky Home</a></h3>' +
             '    <span class="location">Oakland</span>' +
@@ -421,7 +358,7 @@ function add() {
             '        <div class="img" style="background-image: url(../images/wimages/person_1.jpg);"></div>' +
             '        <h3 class="ml-2">John Dorf</h3>' +
             '    </div>' +
-            '     <span class="text-right">2 weeks ago</span>' +
+            '     <span class="text-right">'+houses[i]["launchTime"]+'</span>' +
             ' '+
             '</div>' +
             '</div>' +
