--- a/pro/my/filtertable.html
+++ b/pro/my/filtertable.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../css/bootstrap.min.css">
 
     <link rel="stylesheet" href="../css/jquery.dataTables.min.css">
+
     <!-- font awesome CSS
 		============================================ -->
     <link rel="stylesheet" href="../css/font-awesome.min.css">
@@ -77,7 +78,6 @@
 		============================================ -->
     <script src="../js/vendor/modernizr-2.8.3.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
-    <script src="../js/myjs/pingjia.js"></script>
 </head>
 
 <body>
@@ -247,22 +247,19 @@
         </div>
     </div>
 </div>
-<!-- Mobile Menu end -->
-<!-- Main Menu area start-->
+<!-- Mobile Menu end --><!-- Main Menu area start-->
 <div class="main-menu-area mg-tb-40">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <ul class="nav nav-tabs notika-menu-wrap menu-it-icon-pro">
-                    <li ><a href="commend.html"><i class="notika-icon notika-house"></i> Home</a>
+                    <li class="active"><a data-toggle="tab" href="#Home"><i class="notika-icon notika-house"></i> Home</a>
                     </li>
                     <li><a data-toggle="tab" href="#Houses"><i class="notika-icon notika-edit"></i> My Houses</a>
                     </li>
-                    <li CLASS="active"><a  href="filtertable.html"><i class="notika-icon notika-windows"></i> Filter lookup</a>
+                    <li><a  href="filtertable.html"><i class="notika-icon notika-windows"></i> Filter lookup</a>
                     </li>
                     <li><a href="upload_house.html"><i class="notika-icon notika-form"></i> Selling houses</a>
-                    </li>
-                    <li><a  onclick="t()" ><i class="notika-icon notika-app"></i>Settings</a>
                     </li>
                     <li><a href="chat.html"><i class="notika-icon notika-support"></i>Chatbox</a>
                     </li>
@@ -273,48 +270,9 @@
                     </div>
                     <div id="Houses" class="tab-pane notika-tab-menu-bg animated flipInX">
                         <ul class="notika-main-menu-dropdown">
-                            <li><a href="data.html">Starred</a>
+                            <li><a href="Starred.html">Starred</a>
                             </li>
-                            <li><a href="data-map.html">Bought</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div id="Charts" class="tab-pane notika-tab-menu-bg animated flipInX">
-                        <ul class="notika-main-menu-dropdown">
-                            <li><a href="flot-charts.html">Flot Charts</a>
-                            </li>
-                            <li><a href="bar-charts.html">Bar Charts</a>
-                            </li>
-                            <li><a href="line-charts.html">Line Charts</a>
-                            </li>
-                            <li><a href="area-charts.html">Area Charts</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div id="Tables" class="tab-pane notika-tab-menu-bg animated flipInX">
-                        <ul class="notika-main-menu-dropdown">
-                            <li><a href="normal-table.html">Normal Table</a>
-                            </li>
-                            <li><a href="data-table.html">Data Table</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div id="Forms" class="tab-pane notika-tab-menu-bg animated flipInX">
-                        <ul class="notika-main-menu-dropdown">
-                            <li><a href="form-elements.html">Form Elements</a>
-                            </li>
-                            <li><a href="form-components.html">Form Components</a>
-                            </li>
-                            <li><a href="form-examples.html">Form Examples</a>
-                            </li>
-                        </ul>
-                    </div>
-
-                    <div id="Page" class="tab-pane notika-tab-menu-bg animated flipInX">
-                        <ul class="notika-main-menu-dropdown">
-                            <li><a href="contact.html">Contact</a>
-                            </li>
-                            <li><a href="ht/404.html">404 Page</a>
+                            <li><a href="Sold.html">On Sale</a>
                             </li>
                         </ul>
                     </div>
@@ -334,28 +292,33 @@
                     <div class="row">
                         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                             <div class="nk-int-mk sl-dp-mn">
-                                <h2>Address</h2>
+                                <h2>Direction</h2>
                             </div>
                             <div class="bootstrap-select fm-cmp-mg">
-                                <select class="selectpicker" id="filterregion">
-                                    <option value="r1">密云区</option>
-                                    <option value="r2">延庆区</option>
-                                    <option value="r3">朝阳区</option>
-                                    <option value="r4">丰台区</option>
-                                    <option value="r5">石景山区</option>
-                                    <option value="r6">海淀区</option>
+                                <select class="selectpicker" id="filterdirection">
+                                    <option value="South">South</option>
+                                    <option value="West">West</option>
+                                    <option value="North">North</option>
+                                    <option value="East">East</option>
                                 </select>
                             </div>
                         </div>
 
                         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                             <div class="nk-int-mk sl-dp-mn">
-                                <h2>RoomsType</h2>
+                                <h2>Rooms</h2>
                             </div>
                             <div class="bootstrap-select fm-cmp-mg">
                                 <select class="selectpicker" id="filterroomtype">
                                     <option value="1">1</option>
                                     <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                    <option value="6">6</option>
+                                    <option value="7">7</option>
+                                    <option value="8">8</option>
+                                    <option value="9">9</option>
                                 </select>
                             </div>
                         </div>
@@ -394,6 +357,8 @@
                                     <option value="26">26</option>
                                     <option value="27">27</option>
                                     <option value="28">28</option>
+                                    <option value="29">29</option>
+                                    <option value="30">30</option>
                                 </select>
                             </div>
                         </div>
@@ -403,10 +368,9 @@
                             </div>
                             <div class="bootstrap-select fm-cmp-mg">
                                 <select class="selectpicker" id="filterage">
-                                    <option value="0">New</option>
-                                    <option value="2">Under 2 years</option>
-                                    <option value="5">2-5 years</option>
-                                    <option value="10">More than 5 years</option>
+                                    <option value="1">Under 5 years</option>
+                                    <option value="2">5-10 years</option>
+                                    <option value="3">More than 10 years</option>
                                 </select>
                             </div>
                         </div>
@@ -421,22 +385,21 @@
                             </div>
                             <div class="bootstrap-select fm-cmp-mg">
                                 <select class="selectpicker" id="filterdecoration">
-                                    <option value="1">Ordinary</option>
-                                    <option value="2">Refined</option>
-                                    <option value="3">Luxurious</option>
+                                    <option value="Simple">Simple</option>
+                                    <option value="Medium">Medium</option>
+                                    <option value="High-Grade">High-Grade</option>
                                 </select>
                             </div>
                         </div>
 
                         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                             <div class="nk-int-mk sl-dp-mn">
-                                <h2>HouseType</h2>
+                                <h2>Elevator</h2>
                             </div>
                             <div class="bootstrap-select fm-cmp-mg">
-                                <select class="selectpicker" id="filterhousetype">
-                                    <option value="1">Bungalow</option>
-                                    <option value="2">Villa</option>
-                                    <option value="3">Apartment</option>
+                                <select class="selectpicker" id="filterelevator">
+                                    <option value="No">No</option>
+                                    <option value="Yes">Yes</option>
                                 </select>
                             </div>
                         </div>
@@ -447,18 +410,17 @@
                             </div>
                             <div class="bootstrap-select fm-cmp-mg">
                                 <select class="selectpicker">
-                                    <option>Under 1 million</option>
-                                    <option>1-2 million</option>
-                                    <option>2-3 million</option>
-                                    <option>3-5 million</option>
-                                    <option>Greater than 5 million</option>
+                                    <option value="1">Under 3 million</option>
+                                    <option value="2">3-6 million</option>
+                                    <option value="3">6-9 million</option>
+                                    <option value="4">9-12 million</option>
+                                    <option value="5">Greater than 12 million</option>
                                 </select>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
                             <div >
                                 <button class="btn btn-default btn-icon-notika" style="width:220px;height:60px" id="fsearch" onclick="filtersearch()"><i class="notika-icon notika-search"></i> Search</button>
-
                             </div>
                         </div>
 
@@ -482,12 +444,13 @@
 
                     <!--                        </div>-->
                     <div class="table-responsive">
-                        <table id="data-table-basic" class="table table-striped">
+                        <table id="table" class="table table-striped">
                             <thead>
                             <tr>
                                 <!--                                <th>Type</th>-->
+
                                 <th>Address</th>
-                                <th>Start date</th>
+                                <th>Direction</th>
                                 <th>Price</th>
                                 <th>Square metres</th>
                             </tr>
@@ -629,15 +592,30 @@
 <script src="../js/myjs/jquery.mask.js"></script>
 <script type="text/javascript">
     $(document).ready(function() {
-        // $('#data-table-basic').DataTable();
-        $('#data-table-basic').on('click', 'td', function () {
-            var tr = $(this).parent().children("td:first-child").text();
-            // var td = $(this).find("td");
-            // var data = td.eq(0).text();
-            var url = "house-image.html?index="+tr;
-            window.location.href = url;
-            console.log("ssssssssssss");
-        } );
+        $('#table').DataTable({
+            ajax : {
+                url:"http://175.24.51.64:8081/houses/select?region=Miyun", //访问路径，返回Json数据
+
+                type : "post" ,  //设置请求类型
+
+                // data :"region=Miyun&direction=NorthEast&floor=3"
+            },
+            columns: [
+                { data: 'address'},
+                { data: 'direction'},
+                { data: 'price'},
+                { data: 'size'}
+            ],
+            "order": [[1, 'asc']]
+        });
+        // $('#data-table-basic').on('click', 'td', function () {
+        //     var tr = $(this).parent().children("td:first-child").text();
+        //     // var td = $(this).find("td");
+        //     // var data = td.eq(0).text();
+        //     var url = "house-image.html?index="+tr;
+        //     window.location.href = url;
+        //     console.log("ssssssssssss");
+        // } );
     });
 </script>
 <script>
@@ -654,36 +632,33 @@
         //         toast.addEventListener('mouseleave', Swal.resumeTimer)
         //     }
         // });
-        var floorobj = document.getElementById("filterfloor"); //定位id
-        var floorindex = floorobj.selectedIndex; // 选中索引
-        var floor = floorobj.options[floorindex].value; // 选中值
+        var floorobj = document.getElementById("filterfloor");
+        var floorindex = floorobj.selectedIndex;
+        var floor = floorobj.options[floorindex].value;
 
-        var roomtypeobj = document.getElementById("filterroomtype"); //定位id
-        var roomtypeindex = roomtypeobj.selectedIndex; // 选中索引
-        var roomsType = roomtypeobj.options[roomtypeindex].value; // 选中值
+        var roomtypeobj = document.getElementById("filterroomtype");
+        var roomtypeindex = roomtypeobj.selectedIndex;
+        var roomsType = roomtypeobj.options[roomtypeindex].value;
 
-        var addressobj = document.getElementById("filterregion"); //定位id
-        var addressindex = addressobj.selectedIndex; // 选中索引
-        var address = addressobj.options[addressindex].value; // 选中值
+        var directionobj = document.getElementById("filterdirection");
+        var directionindex = directionobj.selectedIndex;
+        var direction =directionobj.options[directionindex].value;
 
-        var houseTypeobj = document.getElementById("filterhousetype"); //定位id
-        var houseTypeindex = houseTypeobj.selectedIndex; // 选中索引
-        var houseType = houseTypeobj.options[houseTypeindex].value; // 选中值\
 
-        var decorationobj = document.getElementById("filterdecoration"); //定位id
-        var decorationindex = decorationobj.selectedIndex; // 选中索引
-        var decoration = decorationobj.options[decorationindex].value; // 选中值
+        var decorationobj = document.getElementById("filterdecoration");
+        var decorationindex = decorationobj.selectedIndex;
+        var decoration = decorationobj.options[decorationindex].value;
 
-        var ageobj = document.getElementById("filterage"); //定位id
+        var ageobj = document.getElementById("filterage");
         var ageindex = ageobj.selectedIndex; // 选中索引
-        var age = decorationobj.options[ageindex].value; // 选中值
-        var table = $('#data-table-basic').DataTable();
-        console.log("address=" + address+
-            "&roomsType=" + roomsType
-            +"&floor=" + floor+"&age=" + age+"&decoration=" + decoration+"&houseType=" + houseType);
-        var str= "address=" + address+
-            "&roomsType=" + roomsType
-            +"&floor=" + floor+"&age=" + age+"&decoration=" + decoration+"&houseType=" + houseType;
+        var agestart = 2021-ageobj.options[ageindex].value*5;
+        var ageend = 2021;
+        var table = $('#table').DataTable();
+        var str= "direction=" + direction+
+            "&layout=" + roomsType
+            +"&floor=" + floor+"&decoration="+decoration +"&startYear="+agestart+"&endYear="+ageend;
+        console.log("ageindex"+ageindex)
+        console.log(str);
         table.ajax.url("http://175.24.51.64:8081/houses/select?"+str).load();
 
 
