--- a/pro/my/upload_house.html
+++ b/pro/my/upload_house.html
@@ -52,6 +52,7 @@
     <!-- style CSS
 		============================================ -->
     <link rel="stylesheet" href="../css/style.css">
+    <script src="../js/myjs/global.js"></script>
 
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 
@@ -106,7 +107,7 @@
                                     </div>
                                     <div class="search-people">
                                         <i class="notika-icon notika-left-arrow"></i>
-                                        <input type="text" placeholder="Search People" />
+                                        <input type="text" placeholder="Search People"/>
                                     </div>
                                     <div class="hd-message-info">
 
