ChatBox UI updates

--- a/Server/demo/src/main/resources/static/index.html
+++ b/Server/demo/src/main/resources/static/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <link href="https://cdn.bootcss.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="./litewebchat.min.css" />
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdn.bootcss.com/sockjs-client/1.1.4/sockjs.min.js"></script>
   <script src="https://cdn.bootcss.com/stomp.js/2.3.3/stomp.min.js"></script>
@@ -69,7 +70,7 @@
           <th id="privateuser">私信聊天</th>
         </tr>
         </thead>
-        <tbody id="private" style="height:350px; overflow-y:auto; display:block; ">
+        <tbody id="private" class="lite-chatbox" style="height:350px; overflow-y:auto; display:block;">
         <tr class="msg-机器人" hidden><td>00-00 00:00【机器人】对你说：欢迎你来到ocly的聊天室</td></tr>
         </tbody>
       </table>
